<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_bookmarks"
        android:title="@string/txt_bookmarks"
        />

    <item
        android:id="@+id/action_theme"
        android:title="@string/txt_ui_mode"
        />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"/>

    <item
        android:id="@+id/action_weather"
        android:title="@string/covid_19_stats"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_cloud"/>

    <item
        android:id="@+id/action_corona"
        android:title="@string/weather"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_virus"/>
</menu>