<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorShimmerBackground"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTransparent"
        android:minHeight="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:id="@+id/toolbar"
        tools:menu="@menu/app_menu"
        app:subtitle="News on the go"
        app:subtitleTextColor="@color/colorAccent"
        app:subtitleTextAppearance="@style/ToolbarSubTitleAppearance"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorAccent"
        app:titleTextAppearance="@style/ToolbarTitleAppearance"
        app:popupTheme="@style/PopupMenuStyle"
        app:layout_collapseMode="pin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:theme="@style/ToolBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="62dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="@+id/txt_app_name"
                app:layout_constraintEnd_toStartOf="@+id/txt_app_name"
                app:layout_constraintTop_toTopOf="@+id/txt_app_name" />

            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="12pt"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textColor="@color/colorAccent"
                android:textSize="8pt"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_app_name"
                tools:text="1.0.0" />

            <TextView
                android:id="@+id/txt_title_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/developer"
                android:textColor="@color/colorAccent"
                android:textSize="8pt"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txt_app_version"
                app:layout_constraintStart_toStartOf="@+id/txt_app_version"
                app:layout_constraintTop_toBottomOf="@+id/txt_app_version" />

            <TextView
                android:id="@+id/txt_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/developer_name"
                android:textColor="@color/colorAccent"
                android:textSize="8pt"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/txt_title_developer"
                app:layout_constraintStart_toStartOf="@+id/txt_title_developer"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_developer" />

<!--            <Button-->
<!--                android:id="@+id/btn_close"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:background="@drawable/btn_rounded"-->
<!--                android:fontFamily="casual"-->
<!--                android:text="@string/close"-->
<!--                android:textColor="@color/colorWhite"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="@+id/txt_developer"-->
<!--                app:layout_constraintStart_toStartOf="@+id/txt_developer"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/txt_developer" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>