<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="62dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="@+id/txt_app_name"
                app:layout_constraintEnd_toStartOf="@+id/txt_app_name"
                app:layout_constraintTop_toTopOf="@+id/txt_app_name" />

            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="casual"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="12pt"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textColor="@color/colorAccent"
                android:textSize="8pt"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_app_name"
                tools:text="1.0.0" />

            <TextView
                android:id="@+id/txt_title_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/developer"
                android:textColor="@color/colorAccent"
                android:textSize="8pt"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txt_app_version"
                app:layout_constraintStart_toStartOf="@+id/txt_app_version"
                app:layout_constraintTop_toBottomOf="@+id/txt_app_version" />

            <TextView
                android:id="@+id/txt_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/developer_name"
                android:textColor="@color/colorAccent"
                android:textSize="8pt"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/txt_title_developer"
                app:layout_constraintStart_toStartOf="@+id/txt_title_developer"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_developer" />

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:fontFamily="casual"
                android:textStyle="bold|italic"
                android:textColor="@color/colorAccent"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/txt_developer"
                app:layout_constraintStart_toStartOf="@+id/txt_developer"
                app:layout_constraintTop_toBottomOf="@+id/txt_developer" />

            <ImageView
                android:id="@+id/imgController"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_up"
                android:tint="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/txt_message"
                app:layout_constraintStart_toStartOf="@+id/txt_message"
                app:layout_constraintTop_toBottomOf="@+id/txt_message" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/card_btn_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="8dp"
            android:src="@drawable/ic_github"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/card_btn_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_btn_1"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="8dp"
            android:src="@drawable/ic_linkedin"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/card_btn_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_btn_2"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="8dp"
            android:src="@drawable/ic_gmail" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_btn_3"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="8dp"
            android:src="@drawable/ic_instagram"
            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>